Revised CSS, updated pattern primer document, form patterns, new patterns
– Updated CSS styles
– Pattern primer updated so that mark-up and usage guidelines shown in
collabsible panel (in agents supporting HTML5 <details>)
— Lots of new patterns
— NOTE: Still needs reasonable x-browser testing

--- a/_patterns/module-notice-success.html
+++ b/_patterns/module-notice-success.html
@@ -1,4 +1,4 @@
-<div class="notification success">
+<div class="module success-notice">
     <h2 class="h">This is a notification of a successful action or event.</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-</div><!--/.notification.success-->
+</div><!--/.success-notice-->
