--- a/_patterns/module-notice-failure.html
+++ b/_patterns/module-notice-failure.html
@@ -1,8 +1,8 @@
-<div class="notification failure">
+<div class="module failure-notice">
     <h2 class="h">This is a notification of a failed action or event.</h2>
     <p>Please complete the following required fields:</p>
     <ul>
         <li>Name</li>
         <li>Date of birth</li>
     </ul>
-</div><!--/.notification.failure-->
+</div><!--/.failure-notice-->
