--- a/_patterns/module-primary.html
+++ b/_patterns/module-primary.html
@@ -1,4 +1,4 @@
-<div class="notification">
-    <h2 class="h">This is a general notification.</h2>
+<div class="primary-module">
+    <h2 class="h">This is a highlighted area of content.</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-</div><!--/.notification-->
+</div><!--/.module-->
