--- a/_patterns/navigation-breadcrumb.html
+++ b/_patterns/navigation-breadcrumb.html
@@ -1,6 +1,6 @@
-<nav class="breadcrumb">
+<nav role="navigation" class="breadcrumb-nav">
     <a href="#">Lorem section</a> /
     <a href="#">Dolor section</a> /
     <a href="#">Ipsum section</a> /
     <strong class="active">Current section</strong>
-</nav><!--/.active-->
+</nav><!--/.breadcrumb-nav-->
