--- a/_patterns/module-highlight.html
+++ b/_patterns/module-highlight.html
@@ -1,4 +1,4 @@
-<div class="primary-module">
+<div class="module highlight">
     <h2 class="h">This is a highlighted area of content.</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 </div><!--/.module-->
