Remove borders/padding from nav patterns, use .is-active class for active nav items

--- a/_patterns/list-progress.html
+++ b/_patterns/list-progress.html
@@ -1,5 +1,5 @@
 <ol class="progress">
-    <li class="active">Lorem dolor</li>
+    <li class="is-active">Lorem dolor</li>
     <li>Consectetur</li>
     <li>Adipisicin</li>
     <li>Eiusmod</li>
@@ -7,7 +7,7 @@
 
 <ol class="progress">
     <li class="completed"><a href="#">Lorem dolor</a></li>
-    <li class="active">Consectetur</li>
+    <li class="is-active">Consectetur</li>
     <li>Adipisicin</li>
     <li>Eiusmod</li>
 </ol><!--/.progress-->
@@ -16,5 +16,5 @@
     <li class="completed"><a href="#">Lorem dolor</a></li>
     <li class="completed"><a href="#">Consectetur</a></li>
     <li class="completed"><a href="#">Adipisicin</a></li>
-    <li class="active">Eiusmod</li>
+    <li class="is-active">Eiusmod</li>
 </ol><!--/.progress-->
