--- a/_patterns/navigation-breadcrumb.html
+++ b/_patterns/navigation-breadcrumb.html
@@ -2,5 +2,5 @@
     <a href="#">Lorem section</a> /
     <a href="#">Dolor section</a> /
     <a href="#">Ipsum section</a> /
-    <strong class="active">Current section</strong>
+    <strong class="is-active">Current section</strong>
 </nav><!--/.breadcrumb-nav-->
