--- a/_patterns/navigation-page.html
+++ b/_patterns/navigation-page.html
@@ -1,7 +1,7 @@
 <nav role="navigation" class="page-nav">
     <ul>
         <li><a href="#" rel="prev">Previous</a></li>
-        <li><a href="#" class="active">1</a></li>
+        <li><a href="#" class="is-active">1</a></li>
         <li><a href="#">2</a></li>
         <li><a href="#">3</a></li>
         <li><a href="#" rel="next">Next</a></li>
