--- a/_patterns/navigation-vertical.html
+++ b/_patterns/navigation-vertical.html
@@ -1,6 +1,6 @@
 <nav role="navigation" class="vertical-nav">
     <ul>
-        <li><a href="#" class="active">Active tab</a></li>
+        <li><a href="#" class="is-active">Active tab</a></li>
         <li><a href="#">Lorem tab</a></li>
         <li><a href="#">Ipsum tab</a></li>
         <li><a href="#">Dolor tab</a></li>
