--- a/_patterns/layout-module-details.html
+++ b/_patterns/layout-module-details.html
@@ -1,4 +1,4 @@
-<div class="faq module">
+<div class="details module">
 	<details open>
 		<summary>How do I know which bone to choose?</summary>
 		<p>Whether you want to give your dog a nylon bone, a real bone, or a rawhide bone, choose a bone that matches your dog&#8217;s chewing rate and chewing habits. You may also wish to consider your dog's size and choose a bone that best fits his mouth and teeth.</p>
