Updated images to lorempixel.com (domain had moved)

--- a/_patterns/image-framed.html
+++ b/_patterns/image-framed.html
@@ -1,1 +1,1 @@
-<img class="framed" src="http://lorempixum.com/180/136/nature/1" alt=""/>
+<img class="framed" src="http://lorempixel.com/180/136/nature/1" alt=""/>
