--- a/_patterns/image-circular.html
+++ b/_patterns/image-circular.html
@@ -1,1 +1,1 @@
-<img class="circular" src="http://lorempixum.com/136/136/people/1" alt=""/>
+<img class="circular" src="http://lorempixel.com/136/136/people/1" alt=""/>
