--- a/_patterns/image-framed-circular.html
+++ b/_patterns/image-framed-circular.html
@@ -1,3 +1,3 @@
 <span class="framed circular">
-	<img src="http://lorempixum.com/136/136/people/7" alt=""/>
+	<img src="http://lorempixel.com/136/136/people/7" alt=""/>
 </span>
